@@ -8,34 +8,20 @@
  *
  */
 function wfSpecialSpecialpages() {
-	global $wgOut, $wgUser, $wgMessageCache;
+	global $wgOut, $wgUser, $wgMessageCache, $wgSortSpecialPages;
 
 	$wgMessageCache->loadAllMessages();
 
 	$wgOut->setRobotpolicy( 'noindex,nofollow' );  # Is this really needed?
 	$sk = $wgUser->getSkin();
 
-	/** Pages available to all */
-	wfSpecialSpecialpages_gen( SpecialPage::getRegularPages(), 'spheading', $sk );
-
-	/** Restricted special pages */
-	wfSpecialSpecialpages_gen( SpecialPage::getRestrictedPages(), 'restrictedpheading', $sk );
-}
-
-/**
- * sub function generating the list of pages
- * @param $pages the list of pages
- * @param $heading header to be used
- * @param $sk skin object ???
- */
-function wfSpecialSpecialpages_gen($pages,$heading,$sk) {
-	global $wgOut, $wgSortSpecialPages;
-
+	$pages = SpecialPage::getUsablePages();
+	
 	if( count( $pages ) == 0 ) {
 		# Yeah, that was pointless. Thanks for coming.
 		return;
 	}
-
+	
 	/** Put them into a sortable array */
 	$groups = array();
 	foreach ( $pages as $page ) {
@@ -44,44 +30,45 @@ function wfSpecialSpecialpages_gen($pages,$heading,$sk) {
 			if( !isset($groups[$group]) ) {
 				$groups[$group] = array();
 			}
-			$groups[$group][$page->getDescription()] = $page->getTitle();
+			$groups[$group][$page->getDescription()] = array( $page->getTitle(), $page->isRestricted() );
 		}
 	}
-
+	
 	/** Sort */
 	if ( $wgSortSpecialPages ) {
 		foreach( $groups as $group => $sortedPages ) {
 			ksort( $groups[$group] );
 		}
 	}
-
+	
 	/** Always move "other" to end */
 	if( array_key_exists('other',$groups) ) {
 		$other = $groups['other'];
 		unset( $groups['other'] );
 		$groups['other'] = $other;
 	}
-
+	
 	/** Now output the HTML */
-	$wgOut->addHTML( '<h2>' . wfMsgHtml( $heading ) . "</h2>\n" );
+	$restrictedPages = false;
 	foreach ( $groups as $group => $sortedPages ) {
-		$middle = ceil( count($sortedPages)/2 );
-		$total = count($sortedPages);
-		$count = 0;
-
 		$wgOut->addHTML( "<h4 class='mw-specialpagesgroup'>".wfMsgHtml("specialpages-group-$group")."</h4>\n" );
-		$wgOut->addHTML( "<table style='width: 100%;' class='mw-specialpages-table'><tr>" );
-		$wgOut->addHTML( "<td width='30%' valign='top'><ul>\n" );
-		foreach ( $sortedPages as $desc => $title ) {
+		$wgOut->addHTML( "<ul class='mw-specialpages-section'>" );
+		foreach ( $sortedPages as $desc => $specialpage ) {
+			list( $title, $restricted ) = $specialpage;
 			$link = $sk->makeKnownLinkObj( $title , htmlspecialchars( $desc ) );
-			$wgOut->addHTML( "<li>{$link}</li>\n" );
-
-			# Slit up the larger groups
-			$count++;
-			if( $total > 3 && $count == $middle ) {
-				$wgOut->addHTML( "</ul></td><td width='10%'></td><td width='30%' valign='top'><ul>" );
+			if( $restricted ) {
+				$wgOut->addHTML( "<li class='mw-specialpages-page mw-specialpagerestricted'>{$link}</li>\n" );
+				$restrictedPages = true;
+			} else {
+				$wgOut->addHTML( "<li class='mw-specialpages-page'>{$link}</li>\n" );
 			}
 		}
-		$wgOut->addHTML( "</ul></td><td width='30%' valign='top'></td></tr></table>\n" );
+		$wgOut->addHTML( "</ul>\n" );
 	}
+	$wgOut->addHTML(
+		Xml::openElement('div', array( 'class' => 'mw-specialpages-notes' )).
+		wfMsgWikiHtml('specialpages-note').
+		Xml::closeElement('div')
+	);
+	
 }
