@@ -3392,6 +3392,7 @@ Enter the filename without the "{{ns:image}}:" prefix.',
 'fileduplicatesearch-result-n' => 'The file "$1" has {{PLURAL:$2|1 identical duplication|$2 identical duplications}}.',
 
 # Special:SpecialPages
+'specialpages-note'              => "<hr>\n* <span class=\"mw-specialpagerestricted\">Highlighted</span> special pages are restricted.",
 'specialpages-group-maintenance' => 'Maintenance reports',
 'specialpages-group-other'       => 'Other special pages',
 'specialpages-group-login'       => 'Login / sign up',
